manifests/linkerd/httproute-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
# apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: project-vastaya-traffic-split
spec:
  parentRefs:
    - name: projects-vastaya-svc
      group: core
      kind: Service
      namespace: vastaya
      port: 80
  rules:
#     - matches:
#       - headers:
#         - name: "User-Agent"
#           type: RegularExpression
#           value: ".*Firefox.*"
#         - name: Accept-Language
#           type: RegularExpression
#           value: "en-US.*" 
    - backendRefs:
        - name: projects-vastaya-svc
          port: 80
          weight: 0
        - name: tasks-vastaya-svc
          port: 80
          weight: 1
      # Not available yet
      # filters:
      # - type: RequestMirror
      #   requestMirror:
      #     backendRef:
      #       name: tasks-vastaya-svc
      #       port: 80
